--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
 	"license": "MIT",
 	"scripts": {
 		"test": "jest",
-		"start": "nodemon --exec babel-node src/index.js"
+		"start": "nodemon --exec sucrase-node src/index.js"
 	},
 	"dependencies": {
 		"express": "^4.17.1"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.7.2",
-		"@babel/node": "^7.7.0",
-		"@babel/preset-env": "^7.7.1",
+		"@sucrase/jest-plugin": "^2.0.0",
 		"jest": "^24.9.0",
 		"nodemon": "^1.19.4",
+		"sucrase": "^3.10.1",
 		"supertest": "^4.0.2"
+	},
+	"jest": {
+		"transform": {
+			".(js|jsx|ts|tsx)": "@sucrase/jest-plugin"
+		}
 	}
 }
